--- a/style/common.css
+++ b/style/common.css
@@ -5,9 +5,11 @@ body {
     background-image: url('../images/StoneTileDark.png');
     background-repeat: repeat;
     background-size: 32px;
+    image-rendering: pixelated;
     width: 100vw;
     height: 100vh;
     margin: 0 auto;
+    color: White;
 }
 .background {
     width: 100vw;
@@ -19,6 +21,7 @@ body {
     background-image: url('../images/DirtTile.png');
     background-repeat: repeat;
     background-size: 32px;
+    image-rendering: pixelated;
 }
 .logo-shade {
 
