--- a/style/download.css
+++ b/style/download.css
@@ -1,26 +1,25 @@
 @font-face { font-family: ubuntu-b; src: url('../fonts/Ubuntu-B.ttf'); }
 @font-face { font-family: ubuntu-r; src: url('../fonts/Ubuntu-R.ttf'); }
-@font-face { font-family: serif712; src: url('../fonts/712_serif.ttf'); }
 
 .main {
     width: 100vw;
-    height: 1024px;
+    height: 512px;
         display: flex;
         flex-flow: wrap;
             background-image: url('../images/StoneTileDark.png');
             background-repeat: repeat;
             background-size: 32px;
 }
-.text-logo {
-    font-family: ubuntu-b;
-    margin: 0px 32px 8px;
-    color: White;
-    font-size: 64px;
+
+.title-logo {
+    display: flex;
+    justify-content: center;
 }
+
 .main-first {
     width: 60vw;
-    height: 1860px;
-    margin: 0px 32px 8px;
+    height: 512px;
+    margin: 0px 64px 8px;
 }
 .main-first-title {
     font-family: ubuntu-b;
@@ -34,8 +33,8 @@
 
 .main-second {
     width: 60vw;
-    height: 256px;
-    margin: 0px 32px 8px;
+    height: 512px;
+    margin: 0px 64px 8px;
 }
 .main-second-title {
     font-family: ubuntu-b;
@@ -43,21 +42,6 @@
     color: White;
 }
 .main-second-paragraph {
-    font-family: ubuntu-r;
-    color: White;
-}
-
-.main-third {
-    width: 60vw;
-    height: 256px;
-    margin: 0px 32px 8px;
-}
-.main-third-title {
-    font-family: ubuntu-b;
-    font-size: 24px;
-    color: White;
-}
-.main-third-paragraph {
     font-family: ubuntu-r;
     color: White;
 }
